--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   database: numbeers-dev
   pool: 5
   host: localhost
-  username: action
+  username: nitrous
   password:
 
 test:
@@ -14,7 +14,7 @@ test:
   database: numbeers-test
   pool: 5
   host: localhost
-  username: action
+  username: nitrous
   password:
 
 production:
